--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py39, flake8
+envlist = py39, flake8, mypy
 
 [travis]
 python =
@@ -9,6 +9,11 @@ python =
 basepython = python
 deps = flake8
 commands = flake8 online_pomdp_planning tests
+
+[testenv:mypy]
+basepython = python
+deps = mypy
+commands = mypy online_pomdp_planning tests
 
 [testenv]
 setenv =
