Add black & pylint to tox

--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,14 @@
 [tox]
-envlist = py39, flake8, mypy
+envlist = py39, flake8, mypy, pylint, black
 
 [travis]
 python =
     3.9: py39
+
+[testenv:black]
+basepython = python
+deps = black
+commands = black --check --diff online_pomdp_planning tests
 
 [testenv:flake8]
 basepython = python
@@ -14,6 +19,13 @@ commands = flake8 online_pomdp_planning tests
 basepython = python
 deps = mypy
 commands = mypy online_pomdp_planning tests
+
+[testenv:pylint]
+basepython = python
+deps =
+    pylint
+    pytest
+commands = pylint online_pomdp_planning tests
 
 [testenv]
 setenv =
@@ -26,4 +38,3 @@ deps =
 commands =
     pip install -U pip
     pytest --basetemp={envtmpdir}
-
