--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,9 @@ language: python
 python:
   - 3.9
   - 3.8
-  - 3.7
-  - 3.6
 
 # command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
 install: pip install -U tox-travis
 
 # command to run tests, e.g. python setup.py test
-script: tox
+script: tox test-all
