--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -9,6 +9,7 @@ coverage==4.5.4
 Sphinx==3.3.1
 sphinx-theme==1.0
 twine==1.14.0
+sphinx-rtd-theme==0.5.0
 pylint==2.6.0
 pytest==4.6.5
 pytest-runner==5.1
