Import `Protocol` from `typing-extensions`

--- a/tox.ini
+++ b/tox.ini
@@ -25,6 +25,7 @@ basepython = python
 deps =
     pylint
     pytest
+    typing-extensions
 commands = pylint online_pomdp_planning tests
 
 [testenv]
