--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -9,8 +9,8 @@ sphinx-theme==1.0
 twine==1.14.0
 sphinx-rtd-theme==0.5.0
 pylint==2.6.0
-pytest==4.6.5
+pytest==6.2.4
 pytest-runner==5.1
 typing_extensions
-pytest==4.6.5
-sphinx_autodoc_typehints==1.12.0
+black==21.6b0
+isort==5.9.2
