Add muzero and max planning depth
- add 'discrete tree search'
  - with mu-zero as (single) implementation
- provide mu-zeros' scoring method
- add interface for mu-zero's models
- update documents to include muzero
- update make/tox/config targets and options
- update types, remove empty protocols
- test implementation

--- a/setup.cfg
+++ b/setup.cfg
@@ -16,17 +16,35 @@ universal = 1
 
 [flake8]
 exclude = docs
-max-line-length = 100
+max-line-length = 120
+extend-ignore = E203 # "whitespace before ':"' caused by black
 
-[pylint.]
-disable = R0903,C0103,R0913,R0914,W0613
+[pylint]
+max-line-length = 120
+
+[pylint.messages_control]
+disable =
+          R0902,  # "too-many-instance-attributes"
+          R0903,  # "too-few-public-methods"
+          C0103,  # "invalid-name" (variables)
+          R0913,  # "too-many-arguments"
+          R0914,  # "too-many-locals"
+          W0613,  # "unused-argument"
+          C0302,  # "too-many-lines"
+          R0915,  # "too-many-statements"
+          R0801,  # "duplicate lines
 
 [aliases]
 # Define setup.py command aliases here
 test = pytest
 
-[tool:pytest]
-collect_ignore = ['setup.py']
-
 [mypy]
 ignore_missing_imports = True
+
+[isort]
+multi_line_output = 3
+include_trailing_comma = True
+force_grid_wrap = 0
+use_parentheses = True
+ensure_newline_before_comments = True
+line_length = 88
