--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py39, flake8, mypy, pylint, black
+envlist = py39, flake8, mypy, pylint, black, isort
 
 [travis]
 python =
@@ -9,6 +9,11 @@ python =
 basepython = python
 deps = black
 commands = black --check --diff online_pomdp_planning tests
+
+[testenv:isort]
+basepython = python
+deps = isort
+commands = isort --check --diff online_pomdp_planning tests
 
 [testenv:flake8]
 basepython = python
