update: most implemented for state-based PO-UCT
wip: cleaning up

--- a/setup.cfg
+++ b/setup.cfg
@@ -17,7 +17,9 @@ universal = 1
 [flake8]
 exclude = docs
 max-line-length = 120
-extend-ignore = E203 # "whitespace before ':"' caused by black
+extend-ignore = 
+    E203  # "whitespace before ':"' caused by black
+    E731  # allow lambda
 
 [pylint]
 max-line-length = 120
